2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "*.kino" glob pattern, and magic
	patterns to "application/smil". Thanks to J.H.M Dassen. Fixes #3141.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore: add freedesktop.org.xml.
	* freedesktop.org.xml: remove from CVS, since it is auto-generated on
	make dist.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-m4" MIME type. Thanks to
	Macro Pesenti Gritti. Fixes #2049.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of aliases for
	"application/vnd.ms-access", change its description. Thanks to
	Jarosław Staniek. Fixes #3179.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-go-sgf" MIME type. Thanks
	to Peter Lundqvist. Fixes #592.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-sqlite" MIME type. Thanks
	to Jarosław Staniek. Fixes #3178.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: improve docbook, JNLP and GEDCOM description.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: don't mark <acronym/> and
	<expanded-acronym/> for translation.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/mathematica" subclass of
	"text/plain". Thanks to Shaun McCance. Fixes #4345.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix corel draw magic string, add aliases.
	Thanks to Stewart Jeacocke. Fixes #3136.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* update-mime-database.c: (process_freedesktop_node):
	process <acronym/> and <expanded-acronym/>.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "GNUmakefile" pattern to
	"text/x-makefile". Fixes #4334.
